--- a/index.html
+++ b/index.html
@@ -1,1 +1,46 @@
-Hello world !
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Midhun Raj | Software Developer</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header>
+    <h1>Midhun Raj</h1>
+    <p>Software Developer</p>
+  </header>
+
+  <section class="about">
+    <h2>About Me</h2>
+    <p>
+      I'm a software developer with a background in health science and a strong interest in building practical, scalable solutions.
+      After earning my B.S. in Health Science in 2018, I transitioned into tech through Oregon State University's post-baccalaureate CS program.
+      Since 2022, I’ve been working in ERP implementation, developing backend services and workflows using tools like Python, Node.js, and Odoo.
+      I enjoy solving real-world problems through clean, maintainable code.
+    </p>
+  </section>
+
+  <section class="skills">
+    <h2>Skills</h2>
+    <ul>
+      <li>Python</li>
+      <li>JavaScript</li>
+      <li>Express.js</li>
+      <li>Node.js</li>
+      <li>Odoo</li>
+      <li>PostgreSQL</li>
+    </ul>
+  </section>
+
+  <section class="contact">
+    <h2>Contact</h2>
+    <p><a href="https://www.linkedin.com/in/midhun-raj-4016b7227" target="_blank">LinkedIn</a></p>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 Midhun Raj</p>
+  </footer>
+</body>
+</html>
