Profile picture addition

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <header>
+    <img src="profile.jpg" alt="Profile Picture" class="profile-pic" />
     <h1>Midhun Raj</h1>
     <p>Software Developer</p>
   </header>
